# Sellerie

./: .cirrus.yml  .clang-format  .gitignore  Makefile.am  README.md  configure.ac  gtkterm.doap  meson.build  meson_options.txt  org.jensge.GtkTerm.desktop.in  org.jensge.GtkTerm.enums.xml  org.jensge.GtkTerm.gschema.xml  org.jensge.Sellerie.desktop.in  sellerie.1  sellerie.doap
.github/: FUNDING.yml
data/: macros.ui  main-menu.ui  main-window.ui  meson.build  org.jensge.GtkTerm.gresource.xml  org.jensge.Sellerie.gresource.xml  popup-menu.ui  settings-port.ui  settings-window.ui  transfer-infobar.ui
po/: POTFILES.in  meson.build
src/: Makefile.am  buffer.c  buffer.h  cmdline.c  cmdline.h  fichier.c  fichier.h  file-transfer.c  file-transfer.h  gtkterm.c  i18n.c  i18n.h  infobar.c  infobar.h  logging.c  logging.h  macro-editor.c  macro-editor.h  macro-manager.c  macro-manager.h  macros.c  macros.h  main-window.c  main-window.h  meson.build  parsecfg.c  parsecfg.h  serial-port.c  serial-port.h  serial-view.c  serial-view.h  serie.c  serie.h  term_config.c  term_config.h  util.h  view-config.c  view-config.h  widgets.c  widgets.h
subprojects/: vte.wrap
